# app_notas_corretagem

./: .env_exemple  .gitignore  README.md  app.py  pag_dasboard.py  pag_import.py  pag_manut.py  pyproject.toml  styles.html
Scripts_SQL/: Create_views.sql
configs/bd/: postgree.py
configs/rules/: notas.py
pag/: pag_dasboard.py  pag_home.py  pag_import.py  pag_manut.py
styles/: styles.html
util/: util.py
