[tool.poetry]
name = "app-notas-corretagem"
version = "0.1.0"
description = ""
authors = ["Roberto Ricci <roberto.rricci@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
streamlit-option-menu = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
