[tool.poetry]
name = "app-notas-corretagem"
version = "0.1.0"
description = ""
authors = ["Roberto Ricci <roberto.rricci@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
streamlit-option-menu = "^0.3.13"
unidecode = "^1.3.8"
camelot-py = "^0.11.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.32"
python-dotenv = "^1.0.1"
plotly = "^5.23.0"
yfinance = "^0.2.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
